--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 		"bulma": "^0.9.3",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-paypal-button-v2": "^2.6.3",
 		"react-redux": "^7.2.6",
 		"react-router": "^6.2.1",
 		"react-router-dom": "^6.2.1",
