--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"express": "^4.17.2",
 		"express-async-handler": "^1.2.0",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.1.4"
+		"mongoose": "^6.1.4",
+		"razorpay": "^2.8.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.15"
