--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 		"react-router": "^6.2.1",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "5.0.0",
+		"react-spinners": "^0.11.0",
 		"redux": "^4.1.2",
 		"redux-thunk": "^2.4.1",
 		"web-vitals": "^2.1.2"
